# kinemic-gesture-sdk-example-cpp

./: CMakeLists.txt  COPYING  README.md  blemanagerblepp.cpp  blemanagerblepp.h  main.cpp
cmake/: kinemic-gesture-static.cmake
